class Login {
  login(email, password) {
    console.log(email, password)
  }
}

module.exports = Login
